# tinyusb

./: .gitignore
examples/: west.yml
examples/build_system/cmake/cpu/: cortex-m55.cmake
examples/device/audio_test_zephyr/src/: main.c
examples/device/cdc_msc/: CMakeLists.txt  Kconfig  prj.conf
examples/device/cdc_msc/src/: main.c  tusb_config.h
examples/device/cdc_msc_alif/: CMakeLists.txt  common.cmake  cortex-m55.cmake  toolchain.cmake
examples/device/cdc_msc_alif/src/: tusb_config.h
examples/device/hid_composite/: CMakeLists.txt
examples/device/hid_composite_zephyr/: CMakeLists.txt
examples/device/hid_composite_zephyr/src/: main.c
examples/device/net_lwip_webserver_freertos/: CMakeLists.txt  Makefile
examples/device/net_lwip_webserver_freertos/src/: main.c
examples/device/net_lwip_webserver_zephyr/src/: main.c  tusb_config.h
examples/host/cdc_msc_hid/src/: main.c
hw/bsp/: BoardPresets.json  family_support.cmake  zephyr_board_aliases.cmake
hw/bsp/alif/: family.c  family.cmake
hw/bsp/alif/FreeRTOSConfig/: FreeRTOSConfig.h
hw/bsp/alif/boards/alif_e7_dk/: RTE_Components.h  board.cmake  board.h
hw/bsp/alif/boards/alif_e7_dk_rtss_hp/: board.cmake  board.h
hw/bsp/nrf/: family.cmake
hw/bsp/stm32f4/: family.c  family.cmake
src/: tusb.c  tusb_option.h
src/class/cdc/: cdc_device.c
src/common/: tusb_mcu.h
src/device/: usbd.c
src/portable/alif/alif_e7_dk/: dcd_ensemble.c  dcd_ensemble.h  dcd_ensemble_def.h  hcd_ensemble.c  platform_def.h
src/portable/alif/alif_e7_dk_rtss_hp/: M55_HP.h  dcd_ensemble.c  dcd_ensemble.h  platform_def.h
src/portable/xhci/: ux_api.h  ux_hcd_xhci.c  ux_hcd_xhci.h  ux_hcd_xhci_api.h  ux_hcd_xhci_bulk_transfer.c  ux_hcd_xhci_control_transfer.c  ux_hcd_xhci_entry.c  ux_hcd_xhci_ep_bandwidth.c  ux_hcd_xhci_ep_reset.c  ux_hcd_xhci_hub.c  ux_hcd_xhci_initialize.c  ux_hcd_xhci_interrupt_handler.c  ux_hcd_xhci_interrupt_transfer.c  ux_hcd_xhci_isoc_transfer.c  ux_hcd_xhci_list.h  ux_hcd_xhci_mem_init.c  ux_hcd_xhci_port_enable.c  ux_hcd_xhci_port_status_get.c  ux_hcd_xhci_td_process.c  ux_hcd_xhci_transfer_request.c  ux_system_initialize.c  ux_utility_memory_allocate.c  ux_utility_memory_free.c  ux_utility_memory_free_block_best_get.c
tools/: get_deps.py
